Source/WebCore/platform/sql/SQLiteDatabase.h
@@ -71,7 +71,7 @@ public:
     bool transactionInProgress() const { return m_transactionInProgress; }
 
     // Aborts the current database operation. This is thread safe.
-    void interrupt();
+    WEBCORE_EXPORT void interrupt();
 
     int64_t lastInsertRowID();
     int lastChanges();
